syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "./pb";

enum ActivityType {
  ActivityTypeUnspecified = 0;
  Invite = 1;
  AddReview = 2;
  PayService = 3;
  PayOtherService = 4;
  SharePoints = 5;
}

message Activity {
  uint32 id = 1;
  uint32 user_id = 2;
  ActivityType type = 3;
  float points = 4;
  google.protobuf.Timestamp created_at = 5;
}